Fix setup cell outputs not getting collapsed

--- a/assets/css/js_interop.css
+++ b/assets/css/js_interop.css
@@ -134,6 +134,10 @@ server in solely client-side operations.
       @apply hidden;
     }
 
+    [data-el-outputs-container] {
+      @apply hidden;
+    }
+
     [data-el-cell-indicator] {
       @apply bg-gray-50 border-gray-200 text-gray-500;
     }
